sample/error/e03110-n.asn
E03110-N DEFINITIONS ::=
BEGIN
    obj OBJECT IDENTIFIER ::= { -- E03110-N
        iso
    }
END
